fix title text-overflow

--- a/style/common.css
+++ b/style/common.css
@@ -219,6 +219,18 @@ body {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            clear: left;
+        }
+        .notebook-notes li span {
+            display: block;
+            float: left;
+        }
+        .notebook-notes li .text {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 100%;
+            margin-right: 0.4rem;
         }
         .notebook-notes li .time {
             font-size: 1.3rem;
